// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters out arbitrary fields from results, and does not render them 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    />
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is a URL 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
      <li
        key="url"
      >
        <span
          className="sui-result__key"
        >
          url
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "http://www.example.com",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a malicious URL 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    />
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
        <li>
          <span
            class="sui-result__key"
          >
            url
          </span>
           
          <span
            class="sui-result__value"
          >
            javascript://test%0aalert(document.domain)
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is a title 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    >
      <span
        class="sui-result__title"
      >
        Title
      </span>
    </div>
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
        <li>
          <span
            class="sui-result__key"
          >
            title
          </span>
           
          <span
            class="sui-result__value"
          >
            Title
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is a title and url 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    >
      <a
        class="sui-result__title sui-result__title-link"
        href="http://www.example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Title
      </a>
    </div>
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
        <li>
          <span
            class="sui-result__key"
          >
            title
          </span>
           
          <span
            class="sui-result__value"
          >
            Title
          </span>
        </li>
        <li>
          <span
            class="sui-result__key"
          >
            url
          </span>
           
          <span
            class="sui-result__value"
          >
            http://www.example.com
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is a titleField but it is not defined in result 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    />
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is a urlField but it is not defined in result 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    />
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;

exports[`renders correctly when there is not a URL or title 1`] = `
<div>
  <li
    class="sui-result"
  >
    <div
      class="sui-result__header"
    />
    <div
      class="sui-result__body"
    >
      <ul
        class="sui-result__details"
      >
        <li>
          <span
            class="sui-result__key"
          >
            field
          </span>
           
          <span
            class="sui-result__value"
          >
            value
          </span>
        </li>
      </ul>
    </div>
  </li>
</div>
`;
